# HCCL-Competition

./: .gitignore  README.md  problem.md
Hccl_Broadcast_Final/: .clang-format  CMakeLists.txt  README.md  build.sh
Hccl_Broadcast_Final/include/: binary_stream.h  common.h  custom.h  hccl.h  log.h
Hccl_Broadcast_Final/op_host/: CMakeLists.txt  broadcast.cc  exec_op.cc  exec_op.h
Hccl_Broadcast_Final/op_kernel_ccu/: CMakeLists.txt  ccu_kernel.cc  ccu_kernel.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/: CMakeLists.txt  CONTRIBUTING.md  build.sh  version.cmake
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/: CMakeLists.txt  hccl.cmake
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/all_gather/: CMakeLists.txt  all_gather_op.cc
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/all_gather/template/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/all_gather/template/ccu/: CMakeLists.txt  ccu_temp_all_gather_omnipipe_mesh1d_mem2mem.h  ccu_temp_all_gather_omnipipe_nhr1d_mem2mem.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/all_gather/template/ccu/kernel/: CMakeLists.txt  ccu_kernel_all_gather_omnipipe_mesh1d_mem2mem.cc  ccu_kernel_all_gather_omnipipe_mesh1d_mem2mem.h  ccu_kernel_all_gather_omnipipe_nhr1d_mem2mem.cc  ccu_kernel_all_gather_omnipipe_nhr1d_mem2mem.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/: CMakeLists.txt  broadcast_op.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/executor/: ins_v2_broadcast_omnipipe_2d_executor.cc  ins_v2_broadcast_omnipipe_2d_executor.h  ins_v2_broadcast_parallel_executor.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/op_graph/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/selector/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/template/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/template/aicpu/: CMakeLists.txt  ins_temp_allgather_nhr_dpu_inter.h  ins_temp_broadcast_mesh_1D_two_shot.h  ins_temp_broadcast_nhr.h  ins_temp_scatter_mesh_1D_intra.cc
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/template/aiv/: CMakeLists.txt  aiv_temp_broadcast_mesh_1D.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/template/aiv/kernel/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/template/ccu/: CMakeLists.txt  ccu_temp_broadcast_mesh_1D_mem2mem.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/broadcast/template/ccu/kernel/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/: dlhcomm_function.cc  dlhcomm_function.h  exec_timeout_manager.cc  exec_timeout_manager.h  omnipipe_data_slice_calc.h  omnipipe_scatter_data_slice_calc.cc  omnipipe_scatter_data_slice_calc.h  op_common.cc  op_common_ops.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/executor/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/executor/channel/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/executor/registry/: CMakeLists.txt  coll_alg_v2_exec_registry.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/selector/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/template/: aiv_alg_template_base.cc  aiv_alg_template_base.h  alg_v2_template_base.cc  common_alg_template_base.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/template/aicpu/: CMakeLists.txt  load_kernel.cc
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/template/aiv/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/template/ccu/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/template/dpu/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/template/registry/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/template/wrapper/: CMakeLists.txt  dpu_alg_data_trans_wrapper.cc
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/op_common/topo/: CMakeLists.txt  topo_host.h  topo_match_1d.cc  topo_match_1d.h  topo_match_3_level.cc  topo_match_3_level.h  topo_match_multilevel.cc  topo_match_ubx.h  topo_match_ubx_1d.cc  topo_match_ubx_1d.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/scatter/: CMakeLists.txt  scatter_op.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/scatter/template/: CMakeLists.txt
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/scatter/template/ccu/: ccu_temp_scatter_mesh1d.cc  ccu_temp_scatter_mesh1d.h  ccu_temp_scatter_omnipipe_mesh1d_mem2mem.cc  ccu_temp_scatter_omnipipe_mesh1d_mem2mem.h  ccu_temp_scatter_omnipipe_nhr1d_mem2mem.cc  ccu_temp_scatter_omnipipe_nhr1d_mem2mem.h
Hccl_Broadcast_Final/references/hccl-broadcast-reference/src/ops/scatter/template/ccu/kernel/: ccu_kernel_scatter_mesh1d.cc  ccu_kernel_scatter_mesh1d.h  ccu_kernel_scatter_nhr1d_mem2mem.cc  ccu_kernel_scatter_nhr1d_mem2mem.h  ccu_kernel_scatter_omnipipe_mesh1d_mem2mem.cc  ccu_kernel_scatter_omnipipe_mesh1d_mem2mem.h  ccu_kernel_scatter_omnipipe_nhr1d_mem2mem.cc  (+1 more)
Hccl_Broadcast_Preliminary/: .gitignore  CMakeLists.txt
Hccl_Broadcast_Preliminary/include/: log.h
Hccl_Broadcast_Preliminary/op_host/: broadcast.cc
Hccl_Broadcast_Preliminary/op_kernel_aicpu/: CMakeLists.txt  aicpu_kernel.cc  exec_op.cc
artifacts/: dynamic_root_shim.cc  (+7 more)
hccl_broadcast_problem_template/op_host/: CMakeLists.txt  broadcast.cc  launch_aicpu_kernel.cc  launch_aicpu_kernel.h
(+28 files in other folders)
